# bifrost

./: Makefile  README.md  main.py  pyproject.toml
cli/: cli.py
services/: apple.py
src/cli/: runner.py
src/cli/providers/: apple.py  spotify.py
src/services/: apple.py  spotify.py
